--- a/public/stylesheets/app/all.scss
+++ b/public/stylesheets/app/all.scss
@@ -5,7 +5,7 @@
 @import "inset-text";
 @import "key-details";
 @import "last-updated";
-@import "pagination";
+@import "days-navigation";
 @import "section-break";
 @import "header";
 @import "dashboard-count";
