--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -8,7 +8,7 @@
     <div role="dialog" aria-labelledby="bannerDialogTitle" aria-describedby="bannerDialogDesc">
         <span id="bannerDialogTitle" class="govuk-visually-hidden" hidden>Defendant partially matches existing records and needs review.</span>
         <h2 class="govuk-heading-m" id="bannerDialogDesc">
-            {{ data.numberOfPossibleMatches }} possible NDelius {{ recordCount }} found for {{ data.defendantName | properCase }}.
+            {{ data.numberOfPossibleMatches }} possible NDelius {{ recordCount }} found for {{ data.defendantName | properCase | removeTitle }}.
             <a href="/{{ params.courtCode }}/match/defendant/{{ data.caseNo }}" class="govuk-link govuk-link--no-visited-state">Review {{ recordCount }}</a>
         </h2>
     </div>
@@ -87,7 +87,7 @@
                         Name
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        {{ data.defendantName | properCase }}
+                        {{ data.defendantName | properCase | removeTitle }}
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
