--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -49,7 +49,7 @@
         }) }}
     {% endif %}
 
-    <h1 class="govuk-caption-l govuk-!-margin-top-0">{{ data.defendantName | properCase }}</h1>
+    <h1 class="govuk-caption-l govuk-!-margin-top-0">{{ data.defendantName | properCase | removeTitle }}</h1>
     <h2 class="govuk-heading-l">Review possible NDelius records</h2>
     <p class="govuk-body">Compare details and confirm the correct record for the defendant.</p>
 
@@ -69,7 +69,7 @@
                         <tbody class="govuk-table__body">
                         <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header">Name</th>
-                            <td class="govuk-table__cell">{{ defendantName | properCase }}</td>
+                            <td class="govuk-table__cell">{{ defendantName | properCase | removeTitle }}</td>
                         </tr>
                         <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header">DOB</th>
@@ -127,7 +127,7 @@
                                             <th scope="row" class="govuk-table__header" style="width: 40%;">Name</th>
                                             <td class="govuk-table__cell">
                                                 {% set matchName = item.forename + ' ' + (item.middleNames | join(' ') + ' ' if item.middleNames) + item.surname %}
-                                                {{ matchName | properCase | markMatches(defendantName) | safe }}
+                                                {{ matchName | properCase | removeTitle | markMatches(defendantName) | safe }}
                                             </td>
                                         </tr>
                                         <tr class="govuk-table__row">
