--- a/server/views/select-court.njk
+++ b/server/views/select-court.njk
@@ -3,15 +3,12 @@
 {% block navigation %}{% endblock %}
 
 {% block content %}
-
     <form method="post" name="selectCourt" novalidate>
-
-    <h1 class="govuk-heading-l">Select a court</h1>
-
-        <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-2"><a href="/select-court/B10JQ" class="govuk-link govuk-link--no-visited-state">North Tyneside Magistrates' Court</a></p>
-        <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-2"><a href="/select-court/B14LO" class="govuk-link govuk-link--no-visited-state">Sheffield Magistrates' Court</a></p>
-
+        <h1 class="govuk-heading-l">Select a court</h1>
+        {% for court in params.availableCourts %}
+            <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-2">
+                <a href="/select-court/{{ court.code }}" class="govuk-link govuk-link--no-visited-state">{{ court.name }}</a>
+            </p>
+        {% endfor %}
     </form>
-
 {% endblock %}
-
