--- a/server/views/partials/header.html
+++ b/server/views/partials/header.html
@@ -16,7 +16,7 @@
             </svg>
 
             <a class="moj-header__link moj-header__link--organisation-name" href="/">HMPPS</a>
-            <span class="moj-header__link--service-name--wrapper"><a
+            <span class="moj-header__link--service-name--wrapper pac-beta-wrap"><a
                     class="moj-header__link moj-header__link--service-name"
                     href="/">Prepare a case for sentence</a> <span
                     class="pac-phase-tag"><strong class="govuk-tag">Beta</strong></span>
