Fix Beta + banner with minimal overrides

--- a/public/stylesheets/app/_header.scss
+++ b/public/stylesheets/app/_header.scss
@@ -1,13 +1,9 @@
 // 'pac' prefix used for custom styles to prevent collisions
 
-.pac-beta-wrap{
-  display: flex;
-  align-items: baseline;
-}
-
 .pac-phase-tag {
   position: relative;
-  margin-left: 7px;
+  top: 1px;
+  margin-left: 2px;
 }
 
 .pac-sign-out-link {
