--- a/public/stylesheets/app/_overrides.scss
+++ b/public/stylesheets/app/_overrides.scss
@@ -29,6 +29,10 @@
   width: 18%;
 }
 
+.pac-inline-header-banner{
+  line-height: 0.25;
+}
+
 body.js-enabled {
   .moj-js-hidden {
     @include govuk-visually-hidden;
