--- a/server/views/partials/header.html
+++ b/server/views/partials/header.html
@@ -16,10 +16,11 @@
             </svg>
 
             <a class="moj-header__link moj-header__link--organisation-name" href="/">HMPPS</a>
-            <span class="moj-header__link--service-name--wrapper"><a
-                    class="moj-header__link moj-header__link--service-name"
-                    href="/">Prepare a case for sentence</a> <span
-                    class="pac-phase-tag"><strong class="govuk-tag">Beta</strong></span>
+            <span class="moj-header__link--service-name pac-inline-header-banner">
+                <span class="moj-header__link--service-name--wrapper">
+                    <a class="moj-header__link" href="/">Prepare a case for sentence</a>
+                    <span class="pac-phase-tag"><strong class="govuk-tag">Beta</strong></span>
+                </span>
             </span>
 
         </div>
