--- a/server/views/match-manual.njk
+++ b/server/views/match-manual.njk
@@ -110,7 +110,7 @@
                     <input type="hidden" id="crn" name="crn" value="{{ params.crn }}"/>
                     <button type="submit" class="govuk-button">Link record to defendant</button>
 
-                    <p class="govuk-body">If this isn't the record you're looking for you can
+                    <p class="govuk-body">If this isn't the record you're looking for, you can
                         <a href="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/manual"
                            class="govuk-link govuk-link--no-visited-state">search again</a>.
                     </p>
