--- a/server/views/case-summary-record-order-licence.njk
+++ b/server/views/case-summary-record-order-licence.njk
@@ -35,7 +35,7 @@
                     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                Licence condition subtype
+                                Condition
                             </dt>
                             <dd class="govuk-summary-list__value">
                                 {{ licenceConditions.subTypeDescription }}
