--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -141,7 +141,7 @@
             {% if data.probationStatus === "Current" %}
                 <h2 class="govuk-heading-m">Offender Manager</h2>
                 {% if offenderManager.allocatedDate %}
-                    <p class="govuk-body govuk-!-margin-bottom-0">{{ offenderManager.staff.forenames | capitalize }} {{ offenderManager.staff.surname | capitalize }}</p>
+                    <p class="govuk-body govuk-!-margin-bottom-0">{{ offenderManager.staff.forenames | properCase }} {{ offenderManager.staff.surname | properCase }}</p>
                     <p class="govuk-hint govuk-!-margin-top-1">Allocated on {{ moment(offenderManager.allocatedDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
                     <p class="govuk-body govuk-!-margin-bottom-0">Provider: {{ offenderManager.provider }}</p>
                     <p class="govuk-body govuk-!-margin-bottom-0">LDU: {{ offenderManager.team.district }}</p>
