:bug: Fixed issue with day navigation
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -150,6 +150,7 @@
         {%- from "components/days-navigation/macro.njk" import pacDaysNavigation -%}
         {% set totalDays = (params.totalDays - 1) if isSunday else params.totalDays %}
         {{ pacDaysNavigation({
+            baseUrl:  '/' + params.courtCode + '/cases',
             addBusinessDays: params.addBusinessDays,
             totalDays: totalDays,
             startDate: useTodayDate,
