:bug: Corrected issue with appointments awaiting outcome
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -82,7 +82,7 @@
             {% endif %}
         {% elif attendance.complied | string === "true" %}
             {{ absentAppointments.complied.push(attendance) }}
-        {% elif attendance.outcome === "IAPS deleted record" %}
+        {% elif not attendance.outcome or attendance.outcome | lower === "iaps deleted record" %}
             {{ awaitingOutcome.push(attendance) }}
         {% else %}
             {{ absentAppointments.failed.push(attendance) }}
