:bug: Corrected manual match Cancel link depending on previous page
:white_check_mark: Added test for the Cancel link

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/match-manual.njk
+++ b/server/views/match-manual.njk
@@ -82,7 +82,7 @@
 
                     <button type="submit" class="govuk-button">Find record</button>
 
-                    <p class="govuk-body"><a href="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
+                    <p class="govuk-body"><a href="{{ backLink if backLink else "/" }}" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
                 </form>
             {% else %}
                 <form name="matchDefendant" id="matchDefendant" action="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/confirm" method="post" novalidate>
