PIC-1033: Added key details banner on match-manual.njk

--- a/server/views/match-manual.njk
+++ b/server/views/match-manual.njk
@@ -1,4 +1,8 @@
-{% extends "partials/layout.njk" %}
+{% if session.matchType === 'bulk' %}
+    {% extends "partials/layout.njk" %}
+{% else %}
+    {% extends "partials/case-details.njk" %}
+{% endif %}
 
 {% block content %}
 
