--- a/server/views/partials/case-details.njk
+++ b/server/views/partials/case-details.njk
@@ -51,7 +51,8 @@
         probationStatus: probationStatus,
         numberOfPossibleMatches: data.numberOfPossibleMatches,
         breach: breach,
-        hideUnlinkButton: hideUnlinkButton
+        hideUnlinkButton: hideUnlinkButton,
+        manualMatch: data.manualMatch
     }) }}
 
 {% endblock %}
