Content change - Empty state case list message

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -226,7 +226,7 @@
         {% if params.filtersApplied %}
             <span class="govuk-heading-m">0 cases</span>
         {% endif %}
-        <p class="govuk-body">{{ "There are no matching cases." if params.filtersApplied else "No case data available for this day." }}</p>
+        <p class="govuk-body">{{ "There are no matching cases." if params.filtersApplied else "No case list information available." }}</p>
     {% endif %}
 
     {% if totalPages > 1 %}
