:bug: Corrected use of health middleware
:recycle: Refactored health middleware to use config
:white_check_mark: Updated tests
:bug: Corrected rendering errors throuighout when backend service returns unexpected response

Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -22,7 +22,7 @@
         matchType: session.confirmedMatch.matchType
     }) }}
 
-    {% if data.probationStatus | string | lower === "possible ndelius record" %}
+    {% if data.probationStatus and data.probationStatus | string | lower === "possible ndelius record" %}
         {%- from "moj/components/banner/macro.njk" import mojBanner -%}
         {{ mojBanner({
             classes: 'govuk-!-display-inline-block',
