--- a/server/views/match-unlink.njk
+++ b/server/views/match-unlink.njk
@@ -29,7 +29,7 @@
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Date of birth</dt>
-                    <dd class="govuk-summary-list__value">{{ params.moment(details.dateOfBirth, 'YYYY-MM-DD').format('D MMMM YYYY') }}</dd>
+                    <dd class="govuk-summary-list__value">{{ params.moment(details.dateOfBirth, 'YYYY-MM-DD').format('D MMMM YYYY') if details.dateOfBirth }}</dd>
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">CRN</dt>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Probation status</dt>
-                    <dd class="govuk-summary-list__value">{{ details.probationStatus | string | capitalize }}</dd>
+                    <dd class="govuk-summary-list__value">{{ details.probationStatus | string | capitalize if details.probationStatus }}</dd>
                 </div>
             </dl>
 
