--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -199,7 +199,8 @@
     {% endif -%}
 
     {% if params.totalCount %}
-        {% set status = ("<p class=\"govuk-body-s govuk-!-margin-bottom-1 pac-last-updated-stamp\">" + (lastUpdated | escape) + "</p>" + "<p class=\"govuk-body-s govuk-!-margin-bottom-0 pac-next-update-stamp\">" + (nextUpdate | escape) + "</p>") | safe %}
+{#        {% set status = ("<p class=\"govuk-body-s govuk-!-margin-bottom-1 pac-last-updated-stamp\">" + (lastUpdated | escape) + "</p>" + "<p class=\"govuk-body-s govuk-!-margin-bottom-0 pac-next-update-stamp\">" + (nextUpdate | escape) + "</p>") | safe %}#}
+        {% set status = ("<p class=\"govuk-body-s govuk-!-margin-bottom-0 pac-next-update-stamp\">" + (nextUpdate | escape) + "</p>") | safe %}
     {% else %}
         {% set status = "" %}
     {% endif %}
@@ -218,7 +219,8 @@
 
     {% if tableData.rows | length %}
         {% block table %}
-            <span class="govuk-heading-m">{{ params.caseCount }} case{{ 's' if params.caseCount > 1 }} {% if params.subsection !== "" %} {% if params.subsection === "added" %}added to {% else %}removed from {% endif%} today's case list at {{ moment(params.lastUpdated).format('hh:mma') }}{% endif %}</span>
+            <span class="govuk-heading-m">{{ params.caseCount }} case{{ 's' if params.caseCount > 1 }} {% if params.subsection !== "" %} {% if params.subsection === "added" %}added to {% else %}removed from {% endif%} today's case list.{% endif %}</span>
+{#            <span class="govuk-heading-m">{{ params.caseCount }} case{{ 's' if params.caseCount > 1 }} {% if params.subsection !== "" %} {% if params.subsection === "added" %}added to {% else %}removed from {% endif%} today's case list at {{ moment(params.lastUpdated).format('hh:mma') }}{% endif %}</span>#}
             {%- from "govuk/components/table/macro.njk" import govukTable -%}
             {{ govukTable(tableData) }}
         {% endblock %}
