--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -28,6 +28,17 @@
         <link type="text/css" rel="stylesheet" href="/stylesheets/style.min.css"/>
 
         <meta property="og:image" content="/assets/images/govuk-opengraph-image.png">
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-D3VVRQFQB8"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-D3VVRQFQB8');
+        </script>
+
     {% endblock %}
 </head>
 <body class="govuk-template__body">
